# azure-data-engineering

./: .gitignore  Dockerfile.api  docker-compose.yml  main.py  notes.txt  pyproject.toml  requirements.txt  response.csv
.github/workflows/: master_marketstack.yml
src/: __init__.py
src/marketstack/: __init__.py  loading.py
src/marketstack/azure-func/: load.py
utils/: __init__.py  constants.py  models.py
